# rms-psiops

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.claude/memory/: MEMORY.md  feedback_no_ruff_format.md
.claude/rules/: documentation.mdc  python_best_practices.mdc
.claude/skills/python-codebase-analysis/: SKILL.md
.cursor/: settings.json
.cursor/rules/: bug_report.mdc  dependency_management.mdc  environment_best_practices.mdc  git_workflow.mdc  how_to.mdc  pull_request.mdc  python_best_practices.mdc  security.mdc
.cursor/skills/critique-test-suite/: SKILL.md
.cursor/skills/python-codebase-analysis/: SKILL.md  reference.md
.cursor/skills/run-all-checks/: SKILL.md
.github/workflows/: ci.yml
critiques/: 2026-06-19-codebase-analysis.md  2026-06-22-test-suite-critique.md
docs/: code_of_conduct.md  conf.py  contributing.rst  index.rst  module.rst  userguide.rst
in-development/: gaussian_fill.py  histogram_stretch.py  resize-with-mem-management.py  resize.py  robust_mean.py
psiops/: fitting.py  minimum.py  resample.py  reshape.py  stdev.py
psiops/imagemodel/: summedmodel.py
scripts/: read-docs.sh  run-all-checks.sh
src/psiops/: __init__.py  __init__.pyi  _filter.py  _utils.py  _validation.py  camouflage.py  circle.py  fft.py  fitting.py  gaussian_filter.py  ishift.py  maximum.py  mean.py  median.py  minimum.py  outliers.py  patch.py  resample.py  reshape.py  rotate.py  shift.py  stdev.py  stretch.py  unzoom.py  variance.py  zoom.py
src/psiops/imagemodel/: __init__.py  arraymodel.py  gaussian.py  smearedmodel.py  summedmodel.py
tests/: __init__.py  _resize_reference.py  conftest.py  resize.py  test_camouflage.py  test_circle.py  test_fft.py  test_fitting.py  test_gaussian_filter.py  test_imagemodel.py  test_ishift.py  test_maximum.py  test_mean.py  test_median.py  test_minimum.py  test_outliers.py  test_patch.py  test_public_api.py  test_resample.py  test_reshape.py  test_resize.py  test_rotate.py  test_shift.py  test_stdev.py  test_stretch.py  test_utils.py  test_validation.py  test_variance.py  test_zoom.py  unittester.py
