[build-system]
requires = ["setuptools", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "PSIops"
dynamic = ["version"]
description = "TODO"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy >= 1.23.1",
  "psutil >= 5.9",
  "scipy >= 1.9.0",
]
license = "Apache-2.0"
authors = [
  {name = "Mark R. Showalter", email = "mshowalter@seti.org"}
]
maintainers = [
  {name = "Mark R. Showalter", email = "mshowalter@seti.org"}
]
keywords = [
  "astronomy",
  "imaging",
  "planetary science",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows"
]

[project.urls]
Homepage = "https://github.com/SETI/rms-psiops"
Documentation = "https://rms-psiops.readthedocs.io/en/latest"
Repository = "https://github.com/SETI/rms-psiops"
Source = "https://github.com/SETI/rms-psiops"
Issues = "https://github.com/SETI/rms-psiops/issues"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = ["tests"]
# TODO Update desired parallelism
addopts = ["-n", "auto", "--cov=src", "--strict-markers", "--strict-config"]
markers = []
# Surface unexpected runtime warnings as test failures. Add targeted
# `ignore::` entries only for warnings whose remediation lives in a
# separate planned change.
filterwarnings = [
  "error",
]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"psiops" = ["py.typed"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/psiops/_version.py"

[project.optional-dependencies]
dev = [
  "coverage>=7.0",
  "mypy>=1.0",
  "pymarkdownlnt>=0.9.35",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pytest-xdist>=3.8.0",
  "ruff>=0.8",
  # "bandit[toml]>=1.8",
  "pyroma>=4.2",
  # "vulture>=2.14",
  "psiops[docs]",
]
docs = [
  "myst-parser",
  "sphinx>=7",
  "sphinxcontrib-mermaid",
  "sphinx-rtd-theme",
]

[project.scripts]
#TODO = "main.psiops:main"

# Tool configuration

[tool.coverage.run]
branch = true
parallel = true
source = ["psiops"]
omit = ["tests/*", "_version.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
]
fail_under = 90

[tool.mypy]
strict = false
disallow_subclassing_any = false
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "psiops._version"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  "numpy.*",
  "scipy.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Test annotation is a separate open finding; relax here to avoid masking
# source-level errors with test-suite noise.
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.ruff]
target-version = "py311"
line-length = 90
exclude = [
#  "TODO"
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# Explicit rule set (recommended for library projects). Categories:
# E, W = pycodestyle errors/warnings; F = Pyflakes; I = isort; UP = pyupgrade;
# B = bugbear; SIM = simplify; C4 = comprehensions; A = builtins (no shadowing);
# N = pep8-naming; PT = pytest-style; RUF = Ruff-specific (e.g. unused noqa).
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "A", "N", "PT", "RUF"]
# PT011 - pytest.raises is too broad.
# SIM105 - Use contextlib.suppress for suppressions.
# SIM108 - Use ternary operator for simple if/else.
extend-ignore = ["PT011", "SIM105", "SIM108"]

[tool.ruff.lint.per-file-ignores]
#"TODO" = ["TODO"]

[tool.pymarkdown.plugins.md013]
# Line length (disable so README/CONTRIBUTING can use longer lines).
enabled = false

[tool.pymarkdown.plugins.md033]
# Inline HTML (e.g. <br>) allowed in Markdown.
enabled = false

# Uncomment when enabling bandit in [project.optional-dependencies].dev.
# [tool.bandit]
# exclude_dirs = ["tests", "venv", ".venv"]
# targets = ["src"]

# Uncomment when enabling vulture in [project.optional-dependencies].dev.
# [tool.vulture]
# paths = ["src"]
# exclude = ["tests/"]
# min_confidence = 70
